--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/back"
 
+    android:background="@mipmap/back"
+    android:orientation="vertical"
     tools:context=".activity.LevelActivity">
 
     <!--关卡列表-->
     <HorizontalScrollView
         android:id="@+id/level_page"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:fillViewport="true"
-        android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@id/page_controller"
-        app:layout_constraintEnd_toEndOf="parent"
 
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:scrollbars="none">
 
         <RelativeLayout
             android:id="@+id/level_root"
@@ -34,73 +32,164 @@
     <RelativeLayout
         android:id="@+id/page_controller"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/level_page">
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom"
+        android:layout_weight="8"
+        android:background="#8050C6FD"
+        android:gravity="bottom">
 
         <!--返回按钮-->
 
         <!--页面控制器-->
 
-        <ImageButton
-            android:id="@+id/page_home"
-            style="@style/operation_btn"
-            android:layout_width="80dp"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="58dp"
-            android:layout_marginEnd="46dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="45dp"
-            android:background="?attr/selectableItemBackground"
-            android:src="@drawable/level_home_pic" />
-
         <LinearLayout
-            android:layout_width="225dp"
-            android:layout_height="48dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="72dp"
-            android:layout_marginEnd="90dp"
-            android:layout_marginStart="90dp"
-            android:layout_marginTop="60dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/page_left"
-                style="@style/pager_bg"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="4"
+                android:orientation="vertical">
+
+                <ImageButton
+                    android:id="@+id/page_home"
+                    style="@style/operation_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_weight="1"
+                    android:background="?attr/selectableItemBackground"
+                    android:padding="0dp"
+                    android:src="@drawable/level_home_pic" />
+
+                <com.example.androidapp.view.MyTextView
+                    android:id="@+id/myTextView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/imageView10"
+                    android:layout_gravity="center|top"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_weight="2"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:text="主界面"
+                    android:textColor="#403C5C"
+                    android:textSize="22sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="0dp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
                 android:layout_weight="1"
-                android:background="@drawable/level_page_left_pic"
-                android:enabled="false" />
+                android:gravity="center">
 
-            <com.example.androidapp.view.MyTextView
-                android:id="@+id/page_text"
-                style="@style/ShowPagerMessage"
-                android:layout_width="36dp"
-                android:layout_height="31dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:text="1/1"
-                android:textColor="#020101" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="35dp"
+                    android:layout_weight="2"
+                    android:orientation="vertical">
 
-            <Button
-                android:id="@+id/page_right"
-                style="@style/pager_bg"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="@drawable/level_page_right_pic" />
+                    <Button
+                        android:id="@+id/page_left"
+                        style="@style/pager_bg"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/level_page_left_pic"
+                        android:enabled="false" />
 
+                    <com.example.androidapp.view.MyTextView
+                        android:id="@+id/myTextView5"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@+id/imageView10"
+                        android:layout_gravity="center|top"
+                        android:layout_marginEnd="0dp"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_weight="2"
+                        android:foregroundGravity="center"
+                        android:gravity="center"
+                        android:text="主界面"
+                        android:textColor="#403C5C"
+                        android:textSize="22sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:orientation="vertical">
+
+                    <com.example.androidapp.view.MyTextView
+                        android:id="@+id/page_text"
+                        style="@style/ShowPagerMessage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="1/1"
+                        android:textColor="#403C5C"
+                        android:textSize="34sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="35dp"
+                    android:layout_weight="2"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/page_right"
+                        style="@style/pager_bg"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/level_page_right_pic" />
+
+                    <com.example.androidapp.view.MyTextView
+                        android:id="@+id/myTextView4"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_below="@+id/imageView10"
+                        android:layout_gravity="center|top"
+                        android:layout_marginEnd="0dp"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_weight="2"
+                        android:foregroundGravity="center"
+                        android:gravity="center"
+                        android:text="主界面"
+                        android:textColor="#403C5C"
+                        android:textSize="22sp" />
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
 
     </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
