--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -235,12 +235,12 @@
         android:id="@+id/imageView9"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/view_store"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="112dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="60dp"
+        android:layout_alignStart="@+id/view_store"
+        android:layout_marginEnd="81dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="56dp"
         android:background="@drawable/rank_trophy_pic" />
 
 </RelativeLayout>
