--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -152,8 +152,11 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_above="@+id/setting_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-50dp"
+        android:layout_alignEnd="@+id/setting_content"
+        android:layout_alignStart="@+id/setting_content"
+        android:layout_marginBottom="-49dp"
+        android:layout_marginEnd="86dp"
+        android:layout_marginStart="85dp"
         android:background="@drawable/setting_icecream_pic"
         android:gravity="center_horizontal">
 
