--- a/app/src/main/res/layout/activity_failure.xml
+++ b/app/src/main/res/layout/activity_failure.xml
@@ -59,7 +59,7 @@
 
             <Button
                 android:id="@+id/btn_failure_level"
-                android:layout_width="80dp"
+                android:layout_width="60dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
                 android:layout_margin="0dp"
@@ -70,7 +70,7 @@
             <com.example.androidapp.view.MyTextView
                 android:id="@+id/myTextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/imageView10"
@@ -94,7 +94,7 @@
 
             <Button
                 android:id="@+id/btn_failure_restart"
-                android:layout_width="80dp"
+                android:layout_width="60dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
                 android:layout_margin="0dp"
@@ -104,7 +104,7 @@
             <com.example.androidapp.view.MyTextView
                 android:id="@+id/myTextView2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/imageView10"
