--- a/app/src/main/res/layout/activity_link.xml
+++ b/app/src/main/res/layout/activity_link.xml
@@ -77,7 +77,7 @@
                         android:gravity="center"
                         android:text="关卡"
                         android:textColor="@color/white"
-                        android:textSize="28sp" />
+                        android:textSize="20sp" />
 
                     <com.example.androidapp.view.MyTextView
                         android:id="@+id/link_level_text"
@@ -88,20 +88,32 @@
                         android:gravity="center"
                         android:text="4"
                         android:textColor="@color/white"
-                        android:textSize="28sp" />
+                        android:textSize="20sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="330dp"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center"
                     android:layout_weight="4"
                     android:background="@drawable/prop_bg"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
+                    <com.example.androidapp.view.MyTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="金币:"
+                        android:textColor="#FFC107"
+                        android:textSize="28sp" />
+
                     <com.example.androidapp.view.MyLinearLayout
-                        android:layout_width="17dp"
-                        android:layout_height="34dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:background="@drawable/store_show_money_bg">
@@ -125,18 +137,8 @@
                     </com.example.androidapp.view.MyLinearLayout>
 
                     <com.example.androidapp.view.MyTextView
-                        android:layout_width="20dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="金币:"
-                        android:textColor="#FFC107"
-                        android:textSize="28sp" />
-
-                    <com.example.androidapp.view.MyTextView
-                        android:layout_width="20dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:gravity="center"
@@ -146,9 +148,11 @@
 
                     <com.example.androidapp.view.MyTextView
                         android:id="@+id/link_score_text"
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
                         android:text="1000"
                         android:textColor="#FFFFFF"
                         android:textSize="20sp" />
