--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -85,7 +85,7 @@
                     android:gravity="center"
                     android:text="主界面"
                     android:textColor="#403C5C"
-                    android:textSize="22sp" />
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
@@ -103,7 +103,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginStart="35dp"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:orientation="vertical">
 
                     <Button
@@ -129,15 +129,15 @@
                         android:layout_weight="2"
                         android:foregroundGravity="center"
                         android:gravity="center"
-                        android:text="主界面"
+                        android:text="上一页"
                         android:textColor="#403C5C"
-                        android:textSize="22sp" />
+                        android:textSize="20sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
+                    android:layout_weight="4"
                     android:orientation="vertical">
 
                     <com.example.androidapp.view.MyTextView
@@ -150,14 +150,14 @@
                         android:gravity="center"
                         android:text="1/1"
                         android:textColor="#403C5C"
-                        android:textSize="24sp" />
+                        android:textSize="20sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="35dp"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:orientation="vertical">
 
                     <Button
@@ -182,9 +182,9 @@
                         android:layout_weight="2"
                         android:foregroundGravity="center"
                         android:gravity="center"
-                        android:text="主界面"
+                        android:text="下一页"
                         android:textColor="#403C5C"
-                        android:textSize="22sp" />
+                        android:textSize="20sp" />
                 </LinearLayout>
 
             </LinearLayout>
